# python-repo-template

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: class.rst  module.rst
docs/source/api/: index.rst
docs/source/development/: index.rst
docs/source/getting_started/: index.rst
docs/source/how_to/: example_how_to.ipynb  index.rst
docs/source/tutorials/: index.rst
src/pyretem/: module1.py  module2.py
src/pyretem/subpackage1/: __init__.py  module1.py
