[metadata]
name = pyretem
version = attr: pyretem.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = A template repo with setup, docs and test configurations
long_description = file: README.md
url = https://github.com/lpereira95/pyretem
project_urls =
	Bug Tracker = https://github.com/lpereira95/pyretem/issues
classifiers =
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
	License :: OSI Approved :: MIT License

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src